<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SO-04E Mod</string>
    <string name="version_name">1.0.2</string>
    <string name="developer_name">teck4</string>
    <string name="description">ここをタップすると設定が開きます。</string>
    <string name="twitter_screen_name">teck4</string>
    <string name="settings_activity_title_ui">UIの設定</string>
    <string name="settings_category_navigation_bar">ナビゲーションバー</string>
    <string name="settings_title_navigation_bar_style">ナビゲーションバーのスタイル</string>
    <string name="settings_title_disable_search_panel">SearchPanelを無効化</string>
    <string name="settings_summary_disable_search_panel">ホームボタンのタップ・スワイプで現れるSearchPanelを無効化します。</string>
    <string name="settings_category_status_bar">ステータスバー</string>
    <string name="settings_activity_title_clock">時計の設定</string>
    <string name="settings_activity_summary_clock">時計の位置、フォーマットなどの設定</string>
    <string name="settings_title_center_clock">中央に表示</string>
    <string name="settings_summary_center_clock">時計をステータスバーの中央に表示します。</string>
    <string name="settings_title_clock_format">フォーマット</string>
    <string name="settings_summary_clock_format">時計の表示フォーマットを変更します。改行も反映されます。\n例1) yyyy年M月d日(E) a h:mm\n　 →2014年1月17日(金) 午後 5:30\n例2) yyyy/MM/dd EEEE kk:mm\n　 →2014/01/17 金曜日 17:30</string>
    <string name="settings_title_clock_font_size">フォントサイズ</string>
    <string name="settings_summary_clock_font_size">「極小」は2行表示に最適なサイズです。</string>
    <string name="settings_title_clock_bold">太字で表示</string>
    <string name="settings_summary_clock_bold">時計を太字にします。</string>
    <string name="settings_title_no_battery_text">バッテリーテキストを非表示</string>
    <string name="settings_summary_no_battery_text">バッテリーの%表記を非表示にします。</string>
    <string name="settings_category_lock_screen">ロック画面</string>
    <string name="settings_title_enable_lock_screen_rotation">画面回転を有効化</string>
    <string name="settings_summary_enable_lock_screen_rotation">ロック中の画面回転を有効化します。</string>
    <string name="settings_category_other_ui">その他</string>
    <string name="settings_title_transparent_ui">UIの透過</string>
    <string name="settings_summary_transparent_ui">一部のホームアプリで強制的にステータスバーおよびナビゲーションバーを透過します。</string>
    <string name="settings_title_enable_all_screen_rotations">全方向に画面回転</string>
    <string name="settings_summary_enable_all_screen_rotations">全ての方向の画面回転を有効化します。</string>
    <string name="settings_title_disable_unnecessary_menu_key">不要なメニューキーの無効化</string>
    <string name="settings_summary_disable_unnecessary_menu_key">ナビゲーションバーにメニューキーが存在する場合、アプリケーション側の不要なメニューキーを無効化します。</string>
    <string name="settings_title_change_position_kill_all_button">全アプリ終了ボタンの位置変更</string>
    <string name="settings_summary_change_position_kill_all_button">ポートレイトでは画面下、ランドスケープでは画面右に表示します。</string>
    <string name="settings_activity_title_network">ネットワークの設定</string>
    <string name="settings_category_mobile_network">モバイルネットワーク</string>
    <string name="settings_title_disable_mobile_date_switch_messages">データ通信警告を無効化</string>
    <string name="settings_summary_disable_mobile_date_switch_messages">モバイルデータ通信ON/OFF時の警告ダイアログと通知を無効化します。</string>
    <string name="settings_title_enable_network_mode_lte:wcdma_only">LTE,WCDMA固定を有効化</string>
    <string name="settings_summary_enable_network_mode_lte:wcdma_only">ネットワークモードから\n・LTEのみ\n・WCDMAのみ\nを選択できるようにします。\nLTE/3Gの境界で電波が安定しない時などに有効です。</string>
    <string name="settings_category_tethering">テザリング</string>
    <string name="settings_title_enable_hide_tethering_dialog">ダイアログを非表示可能に</string>
    <string name="settings_summary_enable_hide_tethering_dialog">テザリング開始時のダイアログに「今後表示しない」のチェックボックスを表示します。</string>
    <string name="settings_activity_title_notification_and_sound">通知とサウンドの設定</string>
    <string name="settings_category_notification">通知</string>
    <string name="settings_title_notification_led_color">LEDカラー</string>
    <string name="settings_summary_notification_led_color">デフォルトの通知LEDカラー</string>
    <string name="settings_activity_title_notification_led_flash">LEDの点滅間隔</string>
    <string name="settings_activity_summary_notification_led_flash">デフォルトの通知LED点滅間隔</string>
    <string name="settings_title_notification_led_flash_on">点灯時間</string>
    <string name="settings_summary_notification_led_flash_on">ミリ秒(ms)で指定します。\n・デフォルト : 100\n・Android標準 : 500</string>
    <string name="settings_title_notification_led_flash_off">消灯時間</string>
    <string name="settings_summary_notification_led_flash_off">ミリ秒(ms)で指定します。\n・デフォルト : 6000\n・Android標準 : 2000</string>
    <string name="settings_category_sound">サウンド</string>
    <string name="settings_title_disable_volume_key_sound">音量調節の消音化</string>
    <string name="settings_summary_disable_volume_key_sound">音量調節時の効果音を無効化します。</string>
    <string name="settings_title_disable_safe_media_volume">音量過大警告を無効化</string>
    <string name="settings_summary_disable_safe_media_volume">音量過大時の警告ダイアログを無効化します。</string>
    <string name="settings_title_disable_screenshot_sound">スクリーンショットの消音化</string>
    <string name="settings_summary_disable_screenshot_sound">スクリーンショット撮影時のシャッター音を無効化します。</string>
    <string name="settings_activity_title_battery">電源の設定</string>
    <string name="settings_category_charging">充電中の動作</string>
    <string name="settings_title_battery_maximum_led_color">LEDカラー(満)</string>
    <string name="settings_summary_battery_maximum_led_color">充電完了</string>
    <string name="settings_title_battery_full_led_color">LEDカラー(高)</string>
    <string name="settings_summary_battery_full_led_color">充電量90％以上</string>
    <string name="settings_title_battery_medium_led_color">LEDカラー(中)</string>
    <string name="settings_summary_battery_medium_led_color">充電量15〜89％</string>
    <string name="settings_title_battery_low_led_color">LEDカラー(低)</string>
    <string name="settings_summary_battery_low_led_color">充電量14％以下</string>
    <string name="settings_category_battery_warning">残量警告の動作</string>
    <string name="settings_title_disable_battery_warning_dialog">ダイアログを無効化</string>
    <string name="settings_summary_disable_battery_warning_dialog">バッテリー残量低下時の警告ダイアログを無効化します。</string>
    <string name="settings_title_battery_warning_led_color">LEDカラー</string>
    <string name="settings_summary_battery_warning_led_color">バッテリー残量低下時の警告LED点滅色</string>
    <string name="settings_activity_title_battery_warning_led_flash">LEDの点滅間隔</string>
    <string name="settings_activity_summary_battery_warning_led_flash">バッテリー残量低下時の警告LED点滅間隔</string>
    <string name="settings_title_battery_warning_led_flash_on">点灯時間</string>
    <string name="settings_summary_battery_warning_led_flash_on">ミリ秒(ms)で指定します。\n・デフォルト : 100\n・Android標準 : 125</string>
    <string name="settings_title_battery_warning_led_flash_off">消灯時間</string>
    <string name="settings_summary_battery_warning_led_flash_off">ミリ秒(ms)で指定します。\n・デフォルト : 6000\n・Android標準 : 2875</string>
    <string name="settings_activity_title_applications">アプリの設定</string>
    <string name="settings_category_applications_camera">カメラ</string>
    <string name="settings_title_enable_camera_sound_option">シャッター音オプション有効化</string>
    <string name="settings_summary_enable_camera_sound_option">カメラのシャッター音オプションを表示します。</string>
    <string name="settings_category_applications_phone">ダイヤル</string>
    <string name="settings_title_enable_phone_recording">録音を有効化</string>
    <string name="settings_summary_enable_phone_recording">通話中にメニューから録音を開始できるようにします。録音したファイルは、\n/sdcard/recorder に保存されます。</string>
    <string name="settings_category_applications_fmradio">FMラジオ</string>
    <string name="settings_title_fmradio_without_headset">ヘッドセット要求を無効化</string>
    <string name="settings_summary_fmradio_without_headset">ヘッドセット未接続でもFMラジオを起動できるようにします。\n本来ヘッドセットがアンテナとなるため受信感度が著しく低下します。</string>
    <string name="settings_activity_title_about">SO-04E Modについて</string>
    <string name="settings_about_title_developer">開発者</string>
    <string name="settings_about_title_version">バージョン</string>
    <string name="settings_about_description">このモジュールはAndroid4.2.2なSO-04E向けに作成しています。その他の環境・端末での使用は想定していません。また、設定の変更は再起動するまで反映されません。これはパッチを最低限に抑え、他のモジュールとの競合やパフォーマンスの低下を抑えるためです。</string>
    <string name="settings_about_reboot_button_text">再起動</string>
    <string name="settings_about_reboot_confirm">再起動しますか?</string>
    
    <string name="error_led_flash_ms">0〜9900の範囲で指定してください\n変更しない場合は空欄にしてください</string>
    
    <string name="actions_theme_setting">テーマ</string>
    <string name="theme_select_dialog_title">テーマの選択</string>
    <string name="theme_light">ライト</string>
    <string name="theme_dark">ダーク</string>

    <string name="navbar_normal">変更しない</string>
    <string name="navbar_3bt">3ボタン(履歴をメニューに)</string>
    <string name="navbar_5bt_search">5ボタン(メニューと検索追加)</string>
    <string name="navbar_5bt_power">5ボタン(メニューと電源追加)</string>
    
    <string name="clock_font_size_large">大</string>
    <string name="clock_font_size_normal">標準</string>
    <string name="clock_font_size_small">小</string>
    <string name="clock_font_size_extra_small">極小</string>
    
    <string name="accessibility_search">Search</string>
    <string name="accessibility_power">Power</string>
    
</resources>