<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/title_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="onClickDeveloper"
            android:text="@string/settings_about_title_developer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light" />
        
        <TextView
            android:id="@+id/developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_developer"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="onClickDeveloper"
            android:text="@string/developer_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/title_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developer_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/settings_about_title_version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light" />
        
        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_version"
            android:layout_centerHorizontal="true"
            android:text="@string/version_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/settings_about_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <Button
            android:id="@+id/reboot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/description"
            android:layout_marginTop="20dp"
            android:text="@string/settings_about_reboot_button_text" />

    </RelativeLayout>

</ScrollView>